--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 			<div class="collapse navbar-collapse" id="navbarColor03">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#" id="week1">Week 1 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="#week1" id="week1">Week 1 <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" id="week2">Week 2</a>
+						<a class="nav-link" href="#week2" id="week2">Week 2</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" id="week3">Week 3</a>
+						<a class="nav-link" href="#week3" id="week3">Week 3</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" id="week4">Week 4</a>
+						<a class="nav-link" href="#week4" id="week4">Week 4</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#" id="week5">Week 5</a>
+						<a class="nav-link" href="#week5" id="week5">Week 5</a>
 					</li>
 				</ul>
 			</div>
