--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="collapse navbar-collapse" id="navbarColor03">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="#week1" id="week1">Week 1 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="1.html#week1" id="week1">Week 1 <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#week2" id="week2">Week 2</a>
