--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/custom.css">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/brands.css" integrity="sha384-KtmfosZaF4BaDBojD9RXBSrq5pNEO79xGiggBxf8tsX+w2dBRpVW5o0BPto2Rb2F" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/fontawesome.css" integrity="sha384-8WwquHbb2jqa7gKWSoAwbJBV2Q+/rQRss9UXL5wlvXOZfSodONmVnifo/+5xJIWX" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<style type="text/css">body {overflow-x: hidden;}</style>
 	</head>
@@ -12,26 +14,27 @@
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="index.html">Glenn Perez</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
+			<!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
-			</button>
+			</button>-->
 
 			<div class="collapse navbar-collapse" id="navbarColor03">
 				<ul class="navbar-nav mr-auto">
+					<audio id="audio" src="http://www.soundjay.com/button/beep-07.wav" autostart="false" ></audio>
 					<li class="nav-item">
-						<a class="nav-link" href="" id="week1">Week 1 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="#!" id="week1">Week 1 <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="" id="week2">Week 2</a>
+						<a class="nav-link" href="#!" id="week2">Week 2</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="" id="week3">Week 3</a>
+						<a class="nav-link" href="#!" id="week3">Week 3</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="" id="week4">Week 4</a>
+						<a class="nav-link" href="#!" id="week4">Week 4</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="" id="week5">Week 5</a>
+						<a class="nav-link" href="#!" id="week5">Week 5</a>
 					</li>
 				</ul>
 			</div>
@@ -43,12 +46,21 @@
 		</main>
 
 		<footer>
+			<br>
 			<center>
-				<h4><br>
-					GLENN PEREZ
-					<small class="text-muted">&copy 2018</small>
-				</h4>
+				<a class="footer-week" href="#!" id="f-week1">Week 1</a> - 
+				<a class="footer-week" href="#!" id="f-week2">Week 2</a> - 
+				<a class="footer-week" href="#!" id="f-week3">Week 3</a> - 
+				<a class="footer-week" href="#!" id="f-week4">Week 4</a> - 
+				<a class="footer-week" href="#!" id="f-week5">Week 5</a>
 			</center>
+			<center>
+				<small>
+					GLENN PEREZ
+					&copy 2018
+				</small>
+			</center>
+			<center><a id="github" href="https://github.com/singleparadox"><i class="fab fa-github fa-2x"></i></a></center>
 		</footer>
 
 
