--- a/pages/week1.html
+++ b/pages/week1.html
@@ -4,11 +4,11 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="../css/custom.css">
 </head>
 <body>
-  <center>
-  <div style="position: relative;top: 40px; left: 40px; width: 80%; display: block; ">
-    <h1>Week 1</h1>
+  <div class="week">
+    <center><h1>Week 1</h1></center>
     <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link show" data-toggle="tab" onclick="cl('w1d1')" href="#">Day 1</a>
@@ -32,13 +32,12 @@
         <br>
         <h3>Please select a day...</h3>
       </div> 
-    </div>
+    </div><br><br>
 
 
 
 
   </div>
-  </center>
 
 </body>
 </html>
