--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 				<ul class="navbar-nav mr-auto">
 					<audio id="audio" src="http://www.soundjay.com/button/beep-07.wav" autostart="false" ></audio>
 					<li class="nav-item">
-						<a class="nav-link" href="#!" id="week1">Week 1 <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="#week1!" id="week1">Week 1 <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#!" id="week2">Week 2</a>
+						<a class="nav-link" href="#week2!" id="week2">Week 2</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#!" id="week3">Week 3</a>
+						<a class="nav-link" href="#week3!" id="week3">Week 3</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#!" id="week4">Week 4</a>
+						<a class="nav-link" href="#week4!" id="week4">Week 4</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#!" id="week5">Week 5</a>
+						<a class="nav-link" href="#week5!" id="week5">Week 5</a>
 					</li>
 				</ul>
 			</div>
@@ -48,11 +48,11 @@
 		<footer>
 			<br>
 			<center>
-				<a class="footer-week" href="#!" id="f-week1">Week 1</a> - 
-				<a class="footer-week" href="#!" id="f-week2">Week 2</a> - 
-				<a class="footer-week" href="#!" id="f-week3">Week 3</a> - 
-				<a class="footer-week" href="#!" id="f-week4">Week 4</a> - 
-				<a class="footer-week" href="#!" id="f-week5">Week 5</a>
+				<a class="footer-week" href="#week1!" id="f-week1">Week 1</a> - 
+				<a class="footer-week" href="#week2!" id="f-week2">Week 2</a> - 
+				<a class="footer-week" href="#week3!" id="f-week3">Week 3</a> - 
+				<a class="footer-week" href="#week4!" id="f-week4">Week 4</a> - 
+				<a class="footer-week" href="#week5!" id="f-week5">Week 5</a>
 			</center>
 			<center>
 				<small>
