--- a/pages/week2.html
+++ b/pages/week2.html
@@ -6,9 +6,8 @@
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 </head>
 <body>
-  <center>
-  <div style="position: relative;top: 40px; left: 40px; width: 80%; display: block; ">
-    <h1>Week 2</h1>
+  <div class="week">
+    <center><h1>Week 2</h1></center>
     <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link show" data-toggle="tab" onclick="cl('w2d1')" href="#">Day 1</a>
@@ -32,13 +31,13 @@
         <br>
         <h3>Please select a day...</h3>
       </div> 
-    </div>
+    </div><br><br>
 
 
 
 
   </div>
-  </center>
+
 
 </body>
 </html>
