--- a/pages/days/w1d1.html
+++ b/pages/days/w1d1.html
@@ -6,7 +6,10 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img  id="left_image" src="https://lh3.googleusercontent.com/YTtT9rfG0LYWryobYCXbLewTTylEZFmS2ZsqhZhFE5iDhYjsKMGXe3mLwiQ3NGBCKoQgYJ_FFcPGjH6i2UR3CSUtMqUP1xO85AiBYvy31n8M8ItqXWVjPjzIfJPbuqTamxNJCEZWVS3X95z9acWiqz7_gTmojs9QxHW2wEK2xNNK7WfFLt1842jUQE8pU7z-Yic1bl4Vm_x7MGLbkaEwTLnS9Ip2j1ldm-6lniYSPr1znh-1h3oTfZdE61Q4CdnGCSx9PP3znhqks92fCAjrADOETtF7jhEmMJa2Bd3Xv3_miw1l2lxriw-7dYHrxn-vAAB8pBhdNddo_ZMfOi5WZ_5bJpr6l5qZvXa-M4AHQDYYNrY_TpxsnpnooiHJuIITI69O5-aOqSPVMk6HdjqGpPGoWlLdZGmaqSQVB8oZvAjl-BlpTbFfiBVK0O-VKECWcEZVfdnSGMxmhvXj6mZqODqUX_5L64lJgxBsFUl1YlrYKqw16w1I8tzaR68peVNH6HXilTYrNHQPUHwkUiOBO2mr3IAuQ1pH_x43QP1h5M4BILNc5jsAxqP8aiCTmF5FFmyXsB_cQ1xSCL-VH4kxr9vXlpQLSXUOjVFZeT4Xy2D6biuIRFTX-cJ-JERhFPHWGVxyuKttnDlD6Q6gkWKPIdPHun7hEJ4F=w261-h522-no">
+        <br>May 3, 2018,<br>
+        The 1st day of our OJT was great. We were shown around the campus and had our fingerprints scanned. Everyone here is very nice. On this day, we helped with a lot of paper works. We did not do much as it was the first day and we were just given instructions. I also sorted the boxes and added labels to it
+
+        </p>
 </body>
 </html>
