--- a/pages/days/w1d2.html
+++ b/pages/days/w1d2.html
@@ -6,7 +6,11 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/fGz1wCBoD3WMtGhEUpxu_pt0mStVF24qAfbCM7NQ0G5KMl9XUKlB5J0ZGHTcwb7dt_8iVRhjgHvwcRtrC0bu7Q09b4ScSmQjcKt2AN4Jy85ZYbNktuwt0g83oiQ_6CU2N1qrVeSgAE_oIM9_FPnffNwNoor768Tj0yWn9BfQLU4TMr1qoWJE_BzkFbic54bk2jUPCUtC6mgFrMkjwzZHn0zEuII76m9fcKoquFjooAmLWGnUp_HAZiw8VimqFQLkw8TGFwgGsxry8OCo66TFv1YqVC0KPB-FniLhrsVn4EZarwSNUSVsvulA5QTD9BO0Rw5eWaNJCJNnaGbvcVvGaAZBCFSa5m6CBFzs9BIWZN-dti3-W_67qvf4-MbUJ22Ragpjeg2zBroFOhEHntuBmas6qajm9ba1V6cYR-2CI2wtBKIL2Ohgpen_Gkllzq3oVcurl3Cfm3qjBNbQylO6xMYmvdoSGhVIVrsHR96QnCScdtIlD4YWAOi2tJjIWSoqzc79goIfI1-EPi1SbB64R_0Huqb7jxvInlKKqVzjL4BKK96DO3jTQt6f3nGJQWseZfkWjj1nIUKGHNP9MczDQ6KKGlqP64bXxxBvD-NF8CBm99GW1Kjo2VuUrrpFZZQhgU8NYvVypMiCXuug0hhV-lSHaihCZWlt=w1044-h522-no">
+        <br>
+        May 4, 2018
+        <br>
+
+        Day 2, we were briefed on which department we should work with. I was supposed to go the OPD (Office of Planning and Development) but the staff there told me to wait at MAPA and go back at 1pm. At 1pm, we received a message from OPD that they will meet us instead at Monday. We were assigned to MAPA as a result. They discussed about what system they want to use and gave us data to use. After a few hours, it was decided that I would not be assigned to OPD as they were too busy to handle an OJT student. I was assigned here at MAPA instead. I also completed the design of the system that I am going to make which is the Yearbook Bibliographic Entry System.</p>
 </body>
 </html>
