--- a/pages/days/w2d1.html
+++ b/pages/days/w2d1.html
@@ -6,7 +6,12 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/oUzzwr9FSzuGmm6JF_r7ihUCpDXE1FnaBGdJQ_Em4jMLpoYhqL-6fDdGigODBDZRa862IYe95dIwGbacewuY6uUypmJMb_lU5pykNdeS3BDmJL3t-yz_6t04bm5JoK3mcZ21i0CrFCMQ87ELa-5k-doJOKOG3EkrIW_jnkyFjmDVWX4sEpoio-h0uuULmtLVgrusmlLTJo0T6t3dav8RSKOOEhJMGS_J1lts2Y4QPD-R5X8hh4XT8NRV-mcKsgI_foO8R3WfiuYWoQMAOaG0SUBCz851RcI_uuNswQ6HOQgUCbW3wUOGIZjq5jnC5UpV6I634bwk9yZk75JunVsBLz3r0Su1583I8z7yO0syBxkBf7shhQx_8oBq6juQ4ccdoMxGxdRzz90c3tYGDP18gdvm4JhAC54K_a7JS_ks4mmK0ncjSmZiUW8V53vAVu4Sg8RBoKZGOdeJIuI5pIHvM3Ge2yADbITQTQwgUMHq8rwl7pOBerqaAMR2DUBiawLN9Kg3cvvmC_qhImSm5B6MUx13GPZY8rP5-icsj2eFZrj9MRccNuXPPpoXwCGIRnYSgUMT4Gc4MzQ7XM1WS-JRISk3n73DII5T5ZTBPyJagdCbbmUehfO6SGzXWJMb8otyv5Wh5S40hG3J_V81gcDs978kEQFfIDch=w1044-h522-no">
+        	<br>
+        	May 7, 2018
+        	<br>
+
+
+        	Day 3, I mostly completed the system at home (I used JQuery Ajax and PHP) as I had nothing to do. On this day, I polished my code and completed more modules that were needed for the system. Nothing much happened as I programmed the whole day for 10 hours.</p>
 </body>
 </html>
