--- a/pages/days/w2d2.html
+++ b/pages/days/w2d2.html
@@ -6,7 +6,15 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/06CdVa424idNXRH0qft-YLc9OhiA9rkL_NhAFArT1k8BrTTvVE3UElk7pZafBtKak5AT14BD4iKZN0CtbRfsgw04ijcarvqD9LY5rzfXZvd16vDsfBUfB06nkxoLvLdo_a6BOIKf5k08AJJp1Y4oiOKJI0imbbZg1ihIa8FWusfeiO24M2wFAvHew2x9ljDn0ig9OFkhKo7hKbWC6mN7VO2Iu5YChZBXEM2MOiqQP64w-IiH9fKMwra050vgBifRP-nYTFeDlfVLe7T_LtYCbtuZ2iEOpR6o1FwKd7ESRe_hkPXbSITUOsJOs7gLqjy4nL07zz4vdnvPCcLYTCqFWGw9-PJ-b3mKaeya3K8hpro_5MY3CF9KC6uN-EFZtze5S4aLxYdxwmeAzM-oYANXZMUB1hN7sgWNdJ0q5-Gn_ehT-Ar5X-S_z26RKt7fGPXkk0gyBLIDHDwrsbpwRT8AvbfkuuDN04v9cmKapUsEtGJLhoKAZ5BlHcqESSv1tRRbqUx3R3HMxLt9M2I-a-bfTNekIXoAePEUXo6VLNxwg5Fu0V1mhE1WvWdlPwiPtaRoVbEdYvl0uo43AvgE3i5Cx_qSyT0R867WZxWCEc7LEh8zzdok5mw2NZC-Gtc8XJRR35AR7zaUVH1q1ms97kzuMpLF_iodvNpf=w1920-h960-no">
+       	<br>
+       	May 8, 2018
+       	<br>
+        Day 4, I completed the system on this day, but I did not present the system yet as I still need to fix and hunt some bugs that will probably break my system. At 11am, it was decided that we help with the validation and entry students during the enrolment as they were short on hands. We went to the Daraga Magayon Hall and did what we needed to do. It was hectic during 11am to 12pm as there were a lot of people who wants to enrol. However, in the afternoon, it subsided, there were only a handful of people who came to enrol thus we almost had nothing to do.
+
+        <br>
+        <a href="https://photos.app.goo.gl/LsQSKMo1W5jceM1F2">Other Photos</a>
+        <br>
+    	</p>
 </body>
 </html>
