--- a/pages/days/w2d3.html
+++ b/pages/days/w2d3.html
@@ -6,7 +6,17 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/ZBQ4hOQ3k2Dl70Qx8-1YIyG2fTl7caP1MpeucqReFNgxYNmkhTTM5y0DN4op4VjGSWzpQlD6LE7TREGNGVIv9mjBoTLX9loPLX0Xdg-mxQ_OmZvQR9VmpNN0CUm-Xu7Ig0r709QpWUYi_s6e0PWteNzir-57FOGqs8sExsgg2q3_DbRVslNw75khvRriuM4i7ZyryBeJUQ1Oi1MjsX_hrLN-KCzhT2a4H-8cnFk1DPUAV_3RO4vthoYTAJ9T7aDfB0Y8IWZb1b_GuyYghkOt5IZdG8Xsf0H0IY-6Su7lB7ys4t2SsTBOnuYAEn8I9Meri6wmXnIfzsj1fZUqXO8dZG5Xc4kioIjmSdNux4_JkQAmvSEu7E6YHrxmd3DeJHG_WDK91SKK7pYQW9jBOzvf2hzCLYdCmatDXPiAI8gYG_1dXVAnGfAku0G9jNrypWCQ-wfb7AvgJAeocHIceQLN9rG4ebFKJqumMwv7NNjaWgDuaNGzyUuUnjpRDjOs_QcCAezdFecCzxBfDjFlYUMzVSccXW70XuofQs2Q6C9XdNbfqH4gTxjpiyg91GwssJNb-sfWhXtTExYkuVjJjPUwlEfzI4iUj67OZupiwWUKnzokOoOQinymapaHC6--NLm8zJarPwKriWmzEwAYrd38dCoJDX2FTNU6=w1044-h522-no">
+        <br>
+        May 9, 2018
+        <br>
+
+    	Day 5, We presented our system and they were shocked as we finished it in a short amount of time. The presentation was good, but they wanted to integrate another system to the existing system which is a system that will handle SHS students instead of College students. We created the database and started to code. In the afternoon, we helped pack T-Shirts for the upcoming UST- Grand Alumni Homecoming.
+
+    	<br>
+    	<br>
+    	<a href="https://photos.app.goo.gl/gU5lCpTcH48oxRH33">Other Photos</a>
+    	<br>    
+        </p>
 </body>
 </html>
