--- a/pages/days/w2d4.html
+++ b/pages/days/w2d4.html
@@ -6,7 +6,12 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/RneUXIKNFLfQzb5rwywyIjcS670Hf7zqZVTlvIdKpzMmcsOqmgyQlYXv86whpNSkte4_Im6ji0iqk-bzkDbp_zCMLAlJ4q9Mc6WBT0bsBSChUIONJHCJG-9uE8jkyKq-juII4N1-xvLZQopQYqg_irL_9pcNxZTCSkTyd8aCIivXJsg_pl48a5jXfhpx7lgBXTPSW6M0WTS6Gh9IYped612wql4T0K_33Yr5rVJJLBnND8K3FOofKx-1cjTuz4Mtz_6wIxAD0Mtq66B1hbLLN7y5fdwVpdsbqQEv1nCzl4oo8oT6zWEgmhhCYGGTNBdVzmmHjWaHqr6Hnpd71caDSU_dH5WBaELgHtE6v8YMnbDddXIDhGmMGVt_ZtIfEWQxuA9M9oUry_vx1d5NQL9zQCIcyBHiL_J41hMHeSHpqyKDvc5wzbeMHt7bqmDdA_CugMbjysd3FzLnBap7LSQfyH8A2lNywv2SJFp0RfbxKTT1CPV7DwVNbS-qdArha2-pLVsWS8EXzY3Yb-cQhJQhvr-GFbIeU6JySOkduaOq2444wFHDCdxSNptCaYLVEIhf7i_yTgZB4c3ucQ5pHw4o5h9ihVDVVwKRDkKTcX6tODWkzC-Y4MfjDWMuw1kVFOHKW2KE2LWnZbjq1DiWq3VjAtiGDt1OXMJw=w261-h522-no">
+
+        <br>
+        May 10, 2018
+        <br>
+
+    	Not much had happened during this day. The only notable activity that I did during this day is that I coded for 9 hours straight and was extremely tired.</p>
 </body>
 </html>
