--- a/pages/days/w2d5.html
+++ b/pages/days/w2d5.html
@@ -6,7 +6,15 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/1-RzIYeTD4Z4me1x6UlmtLcwtra70KYtefnvuRc4jCh2Q2IFxA4yZyZtoSmb804xzaptzMwzjLzzfThS3zYyFrE1zvUztgA0h4co2yoiPNR-juuUdk2L4ILmmYNN-WzblSazuR36RX7oeh8WDJ8igLbsBVLus_jv2XZ0ibpG9_m88F2DuiZnC1qhZKoOFaB00iZK1nO35zHNpc-_KobvTSO3eB1OTXcJY3zxUWgS3WoSDKU2oLVQgt0b-s2vkXpcRPWQhWqG5386tUwGS_RJAr5RlJCPCsedjylRkLBE26AWkYmmrb57p8jUrMg4y6Y3oeI4ZXzEC40tn2_O7FcvipJz1VIMkdHz9Vpf6tx_pCIaQSwmKhVePyYI8abEaf5zpZFoTXQ9cp2fZ8hK4Q2zqe9Sx89livP3-Tpfvm-6i8RkXi-8UQsFT_x8O61KqUbrw8TvLL2CXYMgCLCTloymUSW8vMEVupAI-_m5wSrcUBqHfss-Ct7f295QxxNvTZbh-W7vmBMDNwbDkLLdXk54nqG1uuEe2QXPflbtmckQQTR1NexPz5ga6K47qxfDpUEWI_tFGfQkYat-u4OqMycx4HyXJQsjMzT0faIUiYtLSmb0RVsQZWcTIgd_M6BRzWqoT0Q6vzbu4Enr6LjbeH1l2MiFGWR-gceJ=w696-h522-no">
+        <br>
+        May 11, 2018
+        <br>
+
+    	The system was done but we still needed to create a template document for printing. After that, the system is done, and we are ready to present it to the office. However, everyone was so busy as the Grand Alumni Homecoming was fast approaching. I coded for half the day and helped create the labels needed for tha Grand Alumni Homecoming.
+    	<br>
+    	<a href="https://photos.app.goo.gl/Rrwv2fgV9rbKImkr1">Other Photos</a>
+    	<br>
+    	</p>
 </body>
 </html>
