--- a/pages/week2.html
+++ b/pages/week2.html
@@ -24,6 +24,9 @@
       <li class="nav-item">
         <a class="nav-link show " data-toggle="tab" onclick="cl('w2d5')" href="#">Day 5</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link show " data-toggle="tab" onclick="cl('w2d6')" href="#">Day 6</a>
+      </li>
     </ul>
 
     <div id="myTabContent" class="tab-content">     
