--- a/pages/days/w3d1.html
+++ b/pages/days/w3d1.html
@@ -6,7 +6,8 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/2zLFcBZtjnosEEJa8F_DDwOIF3PNpG82WlIJrzlU4tCMinV7ioHyqQHOOTaV0xHgQ2KrqIYLFco087RY76GdETIJ95q9XHAFzLWQjXQNE_xcqTWKSoomD0uj13EuE3cXmUdx1bZcEXlotLWwIcsxIPLJjphL1N7jQ8RSd8XXhk2G6g-Kyt7KF8_CO-4UC6HCEJFo1iU4H81nRtvTBogyv2vfGoiGG0I_O2zaQy_iWDY8WBJCU33KXfzLfCz2hf-fz77py_EspRppDX_IxSCcRPH_bTTJS57qkI4SSe7NviO1n9-1hiWfEwkbTr-DXqADtMZviLNOBf7kJVdgSLfvuIiSzIbjnuLsUl8SrHxI0AjczBMsx1CCnku4WT7QpsDXvMBMHLviPRVU40CQ2OpMzgg_Cow3XjM4kPrlFYf_1NxJP-IWhPpalXhdinbSl2KZYyz58tVYVBVqYzIlNtzo2mrqCOf4sLNxwbLv8ZLqDKsNsnwu5TL_7dGcJRsXbuacX_1n6DT2cQ4rbPMPghOYj6SjfURIVxHcYrMpMbgxEJuK8J_pji5owu0L_eknsbtGXAUS4TF2OaZkDaNDGx4VVp6_mhdIDu0nf4reLbCtFf65yRTnUVBUQmf25MnoF7onmpJLHAJC8z1a3xnWXG3lJoKjAAYBpegw=w414-h522-no">
+        May 15, 2018<br>We didn’t really have tasks assigned for this day so, I continued to improve our system as it had multiple flaws that may destroy the system in time. I fixed some database issues, PHP, and JavaScript scripts that were causing the system to misbehave. Later, we passed our completed system to our boss.
+</p>
 </body>
 </html>
