--- a/pages/days/w3d2.html
+++ b/pages/days/w3d2.html
@@ -6,7 +6,10 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/bkGCZY4otoSU3oIzChcHrMX3V9EbOuzl9182WNbDviYdMPInPNhN9zUyoFaKfw0jrSZ-KDnwXpj2xMmQrFSutA9TzAiMFSCFhtSuzQ-v68IIf_6vQJ0ODGwpFn9bttiBtzFQC1bibJ-p89ViS5rh312g8eOvk_2sugXu2A9HpVRqcslMpKtj0lCBMcuF4QrHOTvO4FW6jbX5-TOrnvujgpyVWb_tcMk7OMs-yekipII056pAQYkjmm6k5-QaGdoTXADEjUk9vEJ8PRQOCEFC1UsP28jhATKOGZFG9kdaMczbiL-wT-tIa5A42pAopsGiJ_4o96sMxNhK25_QWe-XsEG7qDEQhqGx8FZKper-r3x-CTmcShmZzitZZ2zBH6U8j-MDON1x-aNb_zx0fHzJAgeziT2FUj6E74FGgc6EYEnauYeR2-0ZyigJ2hNaY6Kc9xPpQCewp8_5pmTGGKLN68eZMhLIwxgqVvcA48Z3Uf2s3tcciI1jnuyCF0J-uOSXEoMu6fvhpVvVTCh9kUsdH8n5Hw4EEcvo1aCw8U3g2YdgGOCeLtOU_Ud9aw9txub_rafdyunQU1wwPnrr5B79W_s1v4THEjOI8Bj13Te5o_SFt5Wgv0zRS9hD12Er4tQWyJDC7wBc05SEey3nyFdjEOyeRhz6FgSr=w1920-h960-no">
+        May 16, 2018<br>
+	There were a lot of staff that were on leave. As a result, I was assigned to the front desk to answer calls from different people. It was a great experience as it improved my social skills. On the same day, we also continued to work on the user manual.
+
+</p>
 </body>
 </html>
