--- a/pages/days/w3d3.html
+++ b/pages/days/w3d3.html
@@ -6,7 +6,9 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/tNQacghycpD7v2n0wZhZRcM4N126hCcEPRai2W1XX35Ske0Exx_0SyBEiF6wQ02kXR_LMfBfqxSpkPqg561AyJY3IF7C2APoAR3-fA9WDSiO8z_77ox-_p5GsjMJnlYFDksPmjSfliaghx8VIsTe6iRGm0PfEltkqLReitB2LLHrHo977OheHmxV0WKeHjnTCQ3cV6irZy9MHizlmSKLp4JaCExgrNU88p2qbhsbjhstkbpjuUaj5KeMqUgXemNrKqeh4k0aFPG0YT2mn0REy39KUV2YTAZVzwR27ZPw-zoOxKJABwlhuZJ2TnaCgRDEfqGqvg9v3n-Ev5hhBKgBQGVS4xgLVJzXayLea8VGdK3TYbHuPHV-nbuSuD8GF7NV2vHSDUhHr5UOEehGbUT71qnzB-vIveaw7wcfvm8E6plIcVgofJ8msr8AaSoh5JYfG4MgI2-89vNgMU7_poh8H8lJ5PFQQkb01P24AtjMMdo3leFBzek4CnXtUC8yEH1kN0b8eZg9YvZyqRuHRyDRKAqDYM65GOt77dyEsi3iw0g6eO4_bKz66X-twFmbBYFlCVa1vkHFGV5cMY3NlghnWfoHyLjULwQEBYaL6TlhcXLL5BfbuWYl-Q1KHIxy0poCQfqknbiy5NyIRIdl4eAo19Sb9JKx2KPn=w1044-h522-no">
+        May 17, 2018<br> 
+	We created the installation manual of our system on this day. And worked on the user manual as I have added more needed features to the system.
+</p>
 </body>
 </html>
