--- a/pages/days/w3d4.html
+++ b/pages/days/w3d4.html
@@ -6,7 +6,9 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/ZtgwCeG4Mu1hVNajNUeO5thiNLvqUgEQOwY20VkGj9u8QT68p4QSYJjWZTLX4Ihk71PqzGXpYMek2l_7_07soBkYTnejCulNC2OMNBPSotSA_0jEUFMbYLqcHbzHi_jxhq04EH7hLdWyzi0amm_NXAo26xMx8wigtXL7RTVpXie8kM_vna-VaJ7FrJLS8g0br3g9hD4BbsGHuQqSd2d2981_qILWwuHaBXq8iuBtF07mM9qDvKKUbmk12_Fz1Tzc0jaI3IZ6HwB856Nq-NE_dIg52UFwHhKv9csaN8drtUitTyueeq376vKawhq8CmeJ7V3kg_se-2Ejc0xFOM3AtMQFjU0KSftfds0fTrzP1nSC9vFAUH9LCy-k6CuIqCxWx-ZJfrgJx80NSJeIwWAcKTv1C37tj3kj23ucytOAOYDK9kss5ejUOx0aJeGrqyvrDCImQ6_LgExldGdfBzXwGCdKQ-5ifKYvweUdG0JBepIVKkvaUX7xKK_r3wIxd1BEYvOrl1FL-lfm6G0FILe7-c769dY4bgDKCpMqejSjAHJbvKHHsfjz3QS1pC1G7QQxtkIO10HUBp0im24TjxmmrlB94Qz0nx-6ovt-Adq7ciZqYqAw7QQtOLtfhOZ85tWvHfETE-yYhO-kx51DWgRiHrFpxWkU6I4f=w1307-h980-no">
+        May 18, 2018<br>
+	We have finished the two manuals that our boss was requiring us to create and submitted it to her. We also taught our boss how to use our system and how to install our system.
+</p>
 </body>
 </html>
