--- a/pages/days/w4d1.html
+++ b/pages/days/w4d1.html
@@ -6,7 +6,12 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/L-hIkg7S1eqCAHmL4bp-qNc7AWdkBy32q2MAYHAvoIsozUKZWSNaQhSJ5GXjnJ0KUT_mza9udQb84KV-ly7REG3w8xKQVPZMjgH1e8iLZAGr64WRW7seO_aGB6IeTH-CMwM-9AAipuY4l2c87wvWOSdv2lE3Gut9AZchZalu71txA2crG7mowjFhovGrfExZXY68tn_XeAs1oKzV3gpKO12abQHXQOe1WyJv9fwjNZQpFPPj96xUATPKRaprNNK9BzdatSqwtcJBlptAXWw6L5JCTkD3UYNMrHW4iATJve5LH-zd1nDrdiL6fNGHj0gQgwpoKzXrnABwXHsCiKAqmwTuH57STBkk8vUNTnpzoD8B5vQAkbVjx_FelDNcSYwj_jmtfPxtH5i4OyArCCXee7dT8YALcFZbfm2hxLytORVYFyFrz0hHSUSMXMtp6DgDHd5jEymfP-Pl8hMe07J5DTSsqE002gBZO3l1lKxWuhqIvfcmu5cgag-sSckbBWjXOI0_xyPkemcF8f4umvCGCoQF-yX9boWLoJgHqd2B3Jxfb9xRRT9crsUbOEMhI5Gpx9Ex4MwjiNRXAF0_KpifTRMHBNUmY0qMAHko5KbfoQ2lIa4CRKT0IfeX8XvwLeAKIkfQQMhzZDapcaMJA95oDs3xLpaz3qJA=w1920-h960-no">
+        May 21, 2018<br>
+	Busy day. We were given a lot of paperwork to encode into an excel file. Four brown envelopes were given and each had papers that were almost 2 inches thick. It was a tiring day. To work faster and efficiently, we have decided to divide the work, I would be given two envelops and Mark (Classmate) would also be given two. Due to laziness and frustration, I created a PHP script that would triple our efficiency. It helped us drastically as it made us work faster.
+
+	<br><br>
+	<a href="https://i.snag.gy/SZ34K8.jpg">Screenshot of the PHP script</a>
+</p>
 </body>
 </html>
