--- a/pages/days/w4d2.html
+++ b/pages/days/w4d2.html
@@ -6,7 +6,8 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+       May 22, 2018<br>
+	We continued to work on the excel file all day. To my surprise, I finished first. With nothing to do, I’ve decided to review on Object Oriented programming while I wait for my friends to finish encoding.
+</p>
 </body>
 </html>
