--- a/pages/days/w4d3.html
+++ b/pages/days/w4d3.html
@@ -6,7 +6,9 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+       
+        May 23, 2018<br>
+	My friends have finished encoding. Before we pass the file, we did some final verifications to check if there are no typographical errors. I thank the script that I made for helping us do the work efficiently. Otherwise, it would have probably taken us two weeks to finish the excel file.
+</p>
 </body>
 </html>
