--- a/pages/days/w4d4.html
+++ b/pages/days/w4d4.html
@@ -6,7 +6,8 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        May 24, 2018<br>
+	I had no tasks assigned this day, so I continued studying. This time, I studied about GUI programming in Python and it was extremely satisfying to learn more about this language.
+</p>
 </body>
 </html>
