--- a/pages/days/w4d5.html
+++ b/pages/days/w4d5.html
@@ -6,7 +6,9 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/vrTobd6Ge8DzkDYQol1ELnVu_xeHCTKocN9ddhsqbmYsk3deJ4siGSsRJYnLeXPT4SIlgbZ-7GyGt0radd4_FxEw64-a5BtPRPmObYqY9rKxdE3jktEVef4eDhk4a179oUFqqNVNKsDRioCvm7epZNWF9huPh_l5P99OzLMw2TDQWhYOQf5mwtroC7OhQzoG6YtvfIQ65o1AMk6Ae8NCTdgQ0gh7Kb072L2V6i2hZSF5ze3c8BzSKohVulMGfSQn2aRRDw4cTeEOFuYXunaADf81EZTSztT6oFyZITdF0L06mA5FbS-YkRU7h_LS-KM4VMjRetD1BtC1QhQpvuO5fGsTXefkW6Y33Lqa4i76Y1y9ZfjRj5LhroOn_mV884EEFLdvtJ04G9N92ze0tVgM2SBLmo_JsuohNLcRN_pimpSh62nOe7DXKDdubJSuzt7WmKM7AG_RPVCYX6717SEMc1CpwEAnuEHFCSbvRZIeLfeFsHU8GSbhRJVKayFAWvGOo6lq1ot8ujaeNfQlr4YE1xOgI9h7khg2pEsA7CxufODROd6UCTF8TXK6AeiPE1v6YInEU06Mc1dtEOJ8a1q9LeGUrr9gUxCYCUD_WDE=w1307-h980-no">
+        May 25, 2018<br>
+	Another batch of paper works were assigned to us but nowhere near deadly as the last. It was a rather simple excel file comprised of four columns and we needed to encode data into it using the data that they have provided. We finished in the afternoon and passed it to our boss.
+</p>
 </body>
 </html>
