--- a/pages/days/w5d1.html
+++ b/pages/days/w5d1.html
@@ -6,7 +6,9 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/88euZKDJrlQuVTrJR96-NbI0-ggmopXu9mXPJAWrXwekovY9wnjsVUfQnt3hLGr4Gz64MEMjKLILuSeEueesqVujcdzv0zo37i9N_yNyFuBvKSE3DTFRXBWwv0AxiFyRjYeVio8s54h6ZAUgglaNACGgXgjvICvQ86WbcALNJwkrwIHtYJ4hQ5GpTHDpoMsGcecijmVxnyIedVjyffWwO1NeVmXGq-ReeDAePmQnnTjJEV-FUqlckaVBLu17UqeiV1f2hj1ufDmLRZ9Z2VSe_KEsZceZgqWMGFC1_Mwd_x54b6-BNJaxA7orc1OB10qyNY-FnQ9g88h-yzp2GutCimHTkkH4tr1fxKSXboMHZ_nOmpVIh-0mxuU21QFluZcKPszrHrkhuNQwKyuMXO952VbOoQQUGGC_-0RF5tTj8MRYos69hn7qEhvFM5A_NekwYRYEwup-NngDqR_P2OGuq8nSd19T2bCQzviN6XSJ_HDJcGO6eYhhJmM_7Sycs6RyxBT2xViU8ivFDDBlZFDUY-tewPAkfJPb_BnG76uX6jRqRjGxi2R4ruqeX1EgCrTBSHWz2bWjA4uKSRZ_47rpMfJKTJf2rjVRqIYXuOw=w1920-h960-no">
+        May 29, 2018<br>
+	We merged all the files and passed the excel files that we have encoded last week to our boss. Then, we were given more data to encode. This time, the data was on the internet therefore, it was also easy as all we need to do was copy and paste the data that was taken from the internet into the excel file. Also, to make our lives easier, we also divided the work. I finished in the afternoon.<br><a href="https://lh3.googleusercontent.com/oVjJYLJJnkdJiU5vidBlIzOLG_xZS9pohjQC1tke1CasIO0QD8zInPuir-8zl7QfKO700tROEoXPRjs8LtM_X_jrUmtWy5ix-jwm39UH9hzNHYtlpPLS909jyV-QNrVLkE6ucp_sQ8veVvG_TXlVez-wlBQ-678gxKTbGxukfjuHnhFOf7CIs6xF9gXKeJdd35M5c1nyHiuMuzkGX30hrRdo-LAgYH3TuaM9vvZ9mcA2aj8KE9Z05hWV1y2qJO0mv5QVOGNOW_7hNIr4OYZIcCeNjqu1NqD07CU4Z9PsVMykzf6COE3OAzlhFf5Z16ldFmYNm8phA_ufoMRdCu4U542BFDV8WV0UCNn5Zqa66yIckf3rHyCvNiH0XghBkCh4KJdcfHZYYk3PIAjETxolmT3zS9zvfdsleJ6D4hdUBlQPJmKyYCHxB4pVwvfzs3LciWTH2vAQ8UU-KQJt9TSYpt9R96Kj0I1mk5T5axnS0I__66N3PR8Vcc67UccT0VnlYPQxoBwIPTnsKy0gBc40heF70rFcr4ywErSun0S5eyS_XdCYc3R-XDXDiiY3DlcAZZYGPvgbHVcnx-_aGIddY2YA0FReMkM7sO6Ufu8=w293-h220-no">Other Images</a>
+</p>
 </body>
 </html>
