--- a/pages/days/w5d2.html
+++ b/pages/days/w5d2.html
@@ -6,7 +6,9 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        <img id="left_image" src="https://lh3.googleusercontent.com/YP9802W8TKpabgATJMre7ux5BTf8vI2jvMHFj1RBRzuzhpSY1oOyYp7p-4lF6Tpmmp2eyLkLCR2EpXG_eXrTP8y35rqQvDDQWXFz93flhlJKy3754CtVzkmPaUjMGcwRo8q6QKrK9CNpEMwfpodZCHX-Sc58aGn4UYpQvAEpwQxAMyaI2fJPqJh7VQiYbtykAHhrlnkixpCVY6b-Fdv8uc9vVsA9SyxtBOuaF6WHcB9c6C7mz6lfYvHUpZgSZUXDkEvHfoMSIEPGNTJ6VtyPmjKWCj6JihUMCR5kMzZLcy5bQqHQpb3AybjhvLLDIsRBAznfyS_D27DlGmW4FQyv3CIFyz1xyuNJebuO21-Zc6Ur0OmspievVCXJrKu5z9_zoiKWhn9ncg6iVYUGquH5kfGrJ3tbiMzQ5iGiwWEkQ4E8nne-gTLsEyrbYG5VNBqZiF9X_LT37xkcxsFoAQ05aegvWib6Pzewx2sPL3xYZo-hdgOV-YTh6g4JDnp1iOUmutSINMWVRcMD2P70ynu934b4sEOKFeYaY7b_xV0btHItunb4uYQEYFV1jE1ymM3dEwrVXuHbpmeCIPQd-HVHX86ItKn3BM1TR5mKu4Y=w1920-h960-no">
+        May 30, 2018<br>
+        Today, we were asked to take data from a website and put it in an excel file which had a similar format to what we did in the last assignment. We didn't finish it quickly as there were a lot of data to be entered to the excel file.
+    </p>
 </body>
 </html>
