--- a/pages/days/w5d3.html
+++ b/pages/days/w5d3.html
@@ -6,7 +6,9 @@
 <body>
 
         <p><br>
-        <img id="left_image" src="http://dummyimage.com/200x200/f0f/fff">
-        NO DATA</p>
+        
+        March 31, 2018<br>
+        I finished the work assigned to me yesterday and I was just waiting for my friends to finish so that we may merge the files and pass the documents to our boss.
+    </p>
 </body>
 </html>
