--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="index.html">Glenn Perez</a>
-			<!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>-->
 
 			<div class="collapse navbar-collapse" id="navbarColor03">
 				<ul class="navbar-nav mr-auto">
@@ -35,6 +32,9 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#week5!" id="week5">Week 5</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#week6!" id="week6">Week 6</a>
 					</li>
 				</ul>
 			</div>
