--- a/pages/days/w6d4.html
+++ b/pages/days/w6d4.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+   
 </head>
 <body>
 
         <p><br>
-        <img id="left_image" src="">
+        June 7, 2018
 
         <br>
-        No Data</p>
+        Not much happened as there were no tasks assigned during this day.</p>
 </body>
 </html>
