--- a/pages/days/w6d5.html
+++ b/pages/days/w6d5.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+   
 </head>
 <body>
 
         <p><br>
-        <img id="left_image" src="">
-
+        <img id="left_image" src="https://lh3.googleusercontent.com/mTgdvi8XNVRi40TiFxmoRCm_RjF2YdVOYZJGBLZjeSfhd7xWXIAH3Gv0O_jluXRmUjKwWxpn-6t7ZqKEw20uwfnL5LDXa1Oarj1PWAyLdzJ4kvavoDe5jGz4U4RIH1sz0kLQO1IcZ7K61HVE8lTySI_02Fx24MoMiIVwRy8rsrwi125NcaRPr_RG0olvQyQXLlH-a_kqv7qYRz8Q-Hk6q3wveZZkBDDgTAfELxJFtHO-DHpDXCwsY2--AoWTgPLjmPvOtvbJSYvG5i1jaQn6WUEQtDybGe_FyZyc1mblAxBMf8iSJVgfxgvqFk8K8rUYSi1XSSl_AAJo-NP71h9buJ4IcoRuA3mImMoGtrRYlzQ1xJsRBS5upFmRWRJ5KUp1TPT0VeI_yNP2lSb92ASMQ4hY-YofVvIKdu67TaYKRNvLfgQl6FbEE125TdfXbZK19K9MKfU2Q2fY6_QqDOEl3Mfg5VwN-A06wVjIE5j-lSIvsNA_ZFkYzPyIPZcXe4dDkXNRlEBwFwFFIv45nWQmZ_rcvvhslnNphPs4M-EAg9ogadtrPmHkUsSd0qCAwbWzckqz8oHY8l8h6lLq54ic8lz4CkPb38rqKJzFAkktiRz9d5MPJSJIe8Kb0mzXN3-wohzRXJvK_wDZ-LYkwNUuglbJrs2Rucw0=w350-h262-no">
+        June 8, 2018
         <br>
-        No Data</p>
+        The last day of our OJT. I was assigned to the front desk as my classmates were already finished with their OJT. Due to my tardiness, I was held for half a day. I was also assigned to give letters to different departments according to a list.<br><br>
+        Over the past days, I was always tired all day, experienced weird things, and deprived of sleep. However, it was a blast. I am going to probably going to miss going to UST-Legazpi to do the OJT program. Everyone was so nice and I learned a lot. Thank you Ma'am Tin, Ma'am Malou, Ma'am Alej, Ma'am Mel and Sir Clinton for letting us stay for our internship program and helping us learn what it feels like to work in an office. Everything was made possible because of these people, Thank you!! :) <a href="https://photos.app.goo.gl/ByZKr4AgJxXbQbWj6">Other Photos</a><br><br><br><small>(P.S. Na cut ni Loyd sa picture si sir Clinton (O.o). May full picture si Mark.)</small>
+    	</p>
 </body>
 </html>
